--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
-streamlit
 google-cloud-bigquery
-google-auth 
-google-auth-oauthlib 
+google-api-python-client
+google-auth
+google-auth-oauthlib
 google-auth-httplib2
